--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/variables.scss';
+@import url('https://fonts.googleapis.com/css?family=Bahianita&display=swap');
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Bahianita', cursive;
+  letter-spacing: .2rem;
+}
